# TODO: Project Arguments

lasem_dom_sources = [
	'lsm.c',
	'lsmdebug.c',
	'lsmstr.c',
	'lsmutils.c',
	'lsmtraits.c',
	'lsmproperties.c',
	'lsmattributes.c',
	'lsmcairo.c',
	'lsmitex.c',
	'lsmdomentities.c',
	'lsmdomnode.c',
	'lsmdomnodelist.c',
	'lsmdomnamednodemap.c',
	'lsmdomdocument.c',
	'lsmdomdocumentfragment.c',
	'lsmdomelement.c',
	'lsmdomcharacterdata.c',
	'lsmdomtext.c',
	'lsmdomview.c',
	'lsmdomparser.c',
	'lsmdomimplementation.c'
]

lasem_mathml_sources = [
    'lsmmathmlenums.c',
    'lsmmathmltraits.c',
    'lsmmathmlattributes.c',
    'lsmmathmloperatordictionary.c',
    'lsmmathmldocument.c',
    'lsmmathmlelement.c',
    'lsmmathmlsemanticselement.c',
    'lsmmathmlphantomelement.c',
    'lsmmathmlmathelement.c',
    'lsmmathmltableelement.c',
    'lsmmathmltablerowelement.c',
    'lsmmathmltablecellelement.c',
    'lsmmathmlspaceelement.c',
    'lsmmathmlradicalelement.c',
    'lsmmathmlscriptelement.c',
    'lsmmathmlfractionelement.c',
    'lsmmathmlunderoverelement.c',
    'lsmmathmlpresentationtoken.c',
    'lsmmathmloperatorelement.c',
    'lsmmathmlstringelement.c',
    'lsmmathmlpresentationcontainer.c',
    'lsmmathmlstyleelement.c',
    'lsmmathmlrowelement.c',
    'lsmmathmlencloseelement.c',
    'lsmmathmlfencedelement.c',
    'lsmmathmlpaddedelement.c',
    'lsmmathmlerrorelement.c',
    'lsmmathmlactionelement.c',
    'lsmmathmlstyle.c',
    'lsmmathmlview.c',
    'lsmmathmlglyphtableams.c',
    'lsmmathmlalignmarkelement.c',
    'lsmmathmlaligngroupelement.c',
    'lsmmathmlitexelement.c',
    'lsmmathmlutils.c',
    'lsmmathmllayoututils.c'
]

lasem_svg_sources = [
    'lsmsvgenums.c',
    'lsmsvgtraits.c',
    'lsmsvgstyle.c',
    'lsmsvgcolors.c',
    'lsmsvglength.c',
    'lsmsvgview.c',
    'lsmsvgmatrix.c',
    'lsmsvgdocument.c',
    'lsmsvgelement.c',
    'lsmsvgtransformable.c',
    'lsmsvgclippathelement.c',
    'lsmsvgsvgelement.c',
    'lsmsvguseelement.c',
    'lsmsvgimageelement.c',
    'lsmsvgsymbolelement.c',
    'lsmsvgmarkerelement.c',
    'lsmsvgaelement.c',
    'lsmsvggelement.c',
    'lsmsvgdefselement.c',
    'lsmsvgrectelement.c',
    'lsmsvgcircleelement.c',
    'lsmsvgellipseelement.c',
    'lsmsvglineelement.c',
    'lsmsvgpolylineelement.c',
    'lsmsvgpolygonelement.c',
    'lsmsvgpathelement.c',
    'lsmsvgtextelement.c',
    'lsmsvgtspanelement.c',
    'lsmsvggradientelement.c',
    'lsmsvglineargradientelement.c',
    'lsmsvgradialgradientelement.c',
    'lsmsvgstopelement.c',
    'lsmsvgswitchelement.c',
    'lsmsvgpatternelement.c',
    'lsmsvgmaskelement.c',
    'lsmsvgfilterelement.c',
    'lsmsvgfilterprimitive.c',
    'lsmsvgfilterblend.c',
    'lsmsvgfiltercolormatrix.c',
    'lsmsvgfiltercomposite.c',
    'lsmsvgfilterconvolvematrix.c',
    'lsmsvgfilterdisplacementmap.c',
    'lsmsvgfilterflood.c',
    'lsmsvgfiltergaussianblur.c',
    'lsmsvgfilterimage.c',
    'lsmsvgfilteroffset.c',
    'lsmsvgfiltermerge.c',
    'lsmsvgfiltermergenode.c',
    'lsmsvgfiltermorphology.c',
    'lsmsvgfilterspecularlighting.c',
    'lsmsvgfiltertile.c',
    'lsmsvgfilterturbulence.c',
    'lsmsvgfiltersurface.c'
]

lasem_dom_headers = [
    'lsm.h',
    'lsmtypes.h',
    'lsmcairo.h',
    'lsmstr.h',
    'lsmutils.h',
    'lsmdebug.h',
    'lsmtraits.h',
    'lsmproperties.h',
    'lsmattributes.h',
    'lsmitex.h',
    'lsmdomentities.h',
    'lsmdom.h',
    'lsmdomtypes.h',
    'lsmdomnode.h',
    'lsmdomnodelist.h',
    'lsmdomnamednodemap.h',
    'lsmdomdocument.h',
    'lsmdomdocumentfragment.h',
    'lsmdomelement.h',
    'lsmdomcharacterdata.h',
    'lsmdomtext.h',
    'lsmdomview.h',
    'lsmdomparser.h',
    'lsmdomimplementation.h'
]

lasem_mathml_headers = [
    'lsmmathml.h',
    'lsmmathmltypes.h',
    'lsmmathmlenums.h',
    'lsmmathmltraits.h',
    'lsmmathmlattributes.h',
    'lsmmathmloperatordictionary.h',
    'lsmmathmldocument.h',
    'lsmmathmlelement.h',
    'lsmmathmlsemanticselement.h',
    'lsmmathmlphantomelement.h',
    'lsmmathmlmathelement.h',
    'lsmmathmltableelement.h',
    'lsmmathmltablerowelement.h',
    'lsmmathmltablecellelement.h',
    'lsmmathmlspaceelement.h',
    'lsmmathmlradicalelement.h',
    'lsmmathmlscriptelement.h',
    'lsmmathmlfractionelement.h',
    'lsmmathmlunderoverelement.h',
    'lsmmathmlpresentationtoken.h',
    'lsmmathmloperatorelement.h',
    'lsmmathmlstringelement.h',
    'lsmmathmlpresentationcontainer.h',
    'lsmmathmlstyleelement.h',
    'lsmmathmlrowelement.h',
    'lsmmathmlencloseelement.h',
    'lsmmathmlfencedelement.h',
    'lsmmathmlpaddedelement.h',
    'lsmmathmlerrorelement.h',
    'lsmmathmlactionelement.h',
    'lsmmathmlstyle.h',
    'lsmmathmlview.h',
    'lsmmathmlglyphtableams.h',
    'lsmmathmlalignmarkelement.h',
    'lsmmathmlaligngroupelement.h',
    'lsmmathmlitexelement.h',
    'lsmmathmlutils.h',
    'lsmmathmllayoututils.h'
]

lasem_svg_headers = [
    'lsmsvg.h',
    'lsmsvgtypes.h',
    'lsmsvgenums.h',
    'lsmsvgtraits.h',
    'lsmsvgattributes.h',
    'lsmsvgstyle.h',
    'lsmsvgcolors.h',
    'lsmsvglength.h',
    'lsmsvgview.h',
    'lsmsvgmatrix.h',
    'lsmsvgdocument.h',
    'lsmsvgelement.h',
    'lsmsvgtransformable.h',
    'lsmsvgclippathelement.h',
    'lsmsvgsvgelement.h',
    'lsmsvgaelement.h',
    'lsmsvggelement.h',
    'lsmsvgdefselement.h',
    'lsmsvguseelement.h',
    'lsmsvgimageelement.h',
    'lsmsvgsymbolelement.h',
    'lsmsvgmarkerelement.h',
    'lsmsvgrectelement.h',
    'lsmsvgcircleelement.h',
    'lsmsvgellipseelement.h',
    'lsmsvglineelement.h',
    'lsmsvgpathelement.h',
    'lsmsvgpolylineelement.h',
    'lsmsvgpolygonelement.h',
    'lsmsvgtextelement.h',
    'lsmsvgtspanelement.h',
    'lsmsvggradientelement.h',
    'lsmsvglineargradientelement.h',
    'lsmsvgradialgradientelement.h',
    'lsmsvgstopelement.h',
    'lsmsvgswitchelement.h',
    'lsmsvgpatternelement.h',
    'lsmsvgmaskelement.h',
    'lsmsvgfilterelement.h',
    'lsmsvgfilterprimitive.h',
    'lsmsvgfilterblend.h',
    'lsmsvgfiltercolormatrix.h',
    'lsmsvgfiltercomposite.h',
    'lsmsvgfilterdisplacementmap.h',
    'lsmsvgfilterconvolvematrix.h',
    'lsmsvgfilterflood.h',
    'lsmsvgfiltergaussianblur.h',
    'lsmsvgfilterimage.h',
    'lsmsvgfilteroffset.h',
    'lsmsvgfiltermerge.h',
    'lsmsvgfiltermergenode.h',
    'lsmsvgfiltermorphology.h',
    'lsmsvgfilterspecularlighting.h',
    'lsmsvgfiltertile.h',
    'lsmsvgfilterturbulence.h',
    'lsmsvgfiltersurface.h',
]

lasem_header_install_dir = 'lasem-' + lasem_api_version

# custom targets (glib mkenums)
gnome = import('gnome')

lasem_dom_types = gnome.mkenums_simple(
	'lsmdomenumtypes',
	sources : lasem_dom_headers,
	install_dir : join_paths(get_option('includedir'), lasem_header_install_dir),
	install_header : true
)

lasem_mathml_types = gnome.mkenums_simple('lsmmathmlenumtypes', sources : lasem_mathml_headers)
lasem_svg_types = gnome.mkenums_simple('lsmsvgenumtypes', sources : lasem_svg_headers)

# combine sources
sources = [
	# Sources
    lasem_dom_sources,
    lasem_mathml_sources,
    lasem_svg_sources,

    # Headers
    lasem_mathml_headers,
    lasem_svg_headers,

    # Built Sources
	lasem_dom_types,
	lasem_mathml_types,
	lasem_svg_types
]

# install headers
install_headers(lasem_dom_headers, subdir : lasem_header_install_dir)

# lasem shared library
liblasem = shared_library(
    'lasem-' + lasem_api_version,
    sources,
    dependencies : deps,
    link_args : ['-lm'], # link with libmath (do this elsewhere?)
    install : true
)

liblasem_dep = declare_dependency(
	link_with : liblasem,
	include_directories : '.'
)

# gobject introspection
if get_option('introspection').enabled()

	lasem_gir_extra_args = [
		'--c-include=lsm.h',
		'--quiet'
	]

	# used later by gi-docgen
	lasem_gir = gnome.generate_gir(
		liblasem,
		sources: [lasem_dom_sources, lasem_dom_headers],
		nsversion: lasem_api_version,
		namespace: 'Lasem',
		symbol_prefix: 'lsm',
		identifier_prefix: 'Lsm',
		link_with: liblasem,
		includes: ['GObject-2.0', 'cairo-1.0', 'Gio-2.0', 'Pango-1.0', 'GdkPixbuf-2.0'],
		install: true,
		install_dir_gir: girdir,
		install_dir_typelib: typelibdir,
		extra_args: lasem_gir_extra_args
	)

endif


# pkg-config
pkgc = import('pkgconfig')

pkgc.generate(
	libraries: [liblasem],
	subdirs: lasem_header_install_dir,
	version: meson.project_version(),
	name: 'Lasem',
	description: 'SVG and MathML rendering library',
	# TODO: Check these are correct
	requires: 'glib-2.0 gobject-2.0 cairo >= 1.2 pangocairo libxml-2.0 gdk-pixbuf-2.0',
	install_dir: libdir / 'pkgconfig'
)

# lasem-render program
lasemrender = executable(
    'lasem-render-' + lasem_api_version,
    'lasemrender.c',
    dependencies : [liblasem_dep, deps],
    install : true
)
